fixed ? horizontal scroll on mobile

--- a/src/css/geral.css
+++ b/src/css/geral.css
@@ -166,6 +166,9 @@ text-align: center;}
 }
 
 @media screen and (max-width: 600px){
+  body{
+    max-width: 100vw !important;
+  }
   .header{
     padding: 4% 4%;
     height: 3vh;
